figured out how to pass variables to html

--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -7,6 +7,10 @@
     <title>Slugbites</title>
 </head>
 <body>
-    <p>Base Template</p>
+    <div id="content", name="content">
+        {% block content %}
+
+        {% endblock %}
+    </div>
 </body>
 </html>
