figured out filtering items in the html file

--- a/slugbites/main/templates/main/food.html
+++ b/slugbites/main/templates/main/food.html
@@ -8,7 +8,9 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
         <h1>Full Menu</h1>
         <ul>
             {% for item in food %}
-                <li>{{item}}</li>
+                {% if "veggie" in item.tags and "gluten" in item.tags%}
+                    <li>{{item}}</li>
+                {% endif %}
             {% endfor %}
         </ul>
     {% endblock %}
