adden navbar to base.html

--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -11,6 +11,10 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
     <title>Slugbites</title>
 </head>
 <body>
+    <div class="navbar">
+        <a href="/home">Home</a>
+        <a href="/food">Dishes</a>
+    </div>
     <div id="content", name="content">
         {% block content %}
 
