--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -5,6 +5,22 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <style type="text/css">
+        .navbar {
+            height:50px;
+            width:100%;
+            position: fixed;
+            z-index:1;
+            top:0;
+            left:0;
+            background-color:#111;
+            overflow-y: hidden;
+            padding-top:25px;
+        }
+
+    </style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
