made the list of all dishes a div

--- a/slugbites/main/templates/main/food.html
+++ b/slugbites/main/templates/main/food.html
@@ -6,12 +6,14 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
     {% block content %}
         <h1>Full Menu</h1>
-        <ul>
-            {% for meal, items in food.items %}
-                <h2>{{meal}}</h2>
-                {% for item in items %}
-                    <li>{{item}}</li>
+        <div>
+            <ul>
+                {% for meal, items in food.items %}
+                    <h2>{{meal}}</h2>
+                    {% for item in items %}
+                        <li>{{item}}</li>
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
-        </ul>
+            </ul>
+        </div>
     {% endblock %}
