--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -3,7 +3,9 @@ License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 {% extends "main/base.html" %}
-
+<link rel="stylesheet" href="{static 'style.css' %}" />
 {% block content %}
-<h1>SlugBites</h1>
+<div>
+    <h1>SlugBites</h1>
+</div>
 {% endblock %}
