added padding to main

--- a/slugbites/main/templates/main/food.html
+++ b/slugbites/main/templates/main/food.html
@@ -4,7 +4,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 {% extends "main/base.html" %}
     {% block content %}
-        <h1>Full Menu</h1>
+        <h1 style="padding-top: 50px">Full Menu</h1>
         <div>
             <ul>
                 {% for meal, items in food.items %}
