--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -6,7 +6,8 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 {% load static %}
 <link rel="stylesheet" href="% static 'slugbits/style.css' %" />
 {% block content %}
-<div style="padding-top: 50px;">
+<div>
     <h1>SlugBites</h1>
 </div>
+<img src="{% static 'slugbites/frog.jpg' %}" alt="My image">
 {% endblock %}
