--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -4,8 +4,8 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 {% extends "main/base.html" %}
 {% load static %}
-<link rel="stylesheet" href="% static 'slugbits/style.css' %" />
 {% block content %}
+<link rel="stylesheet" href="% static 'slugbites/style.css' %"/>
 <div>
     <h1>SlugBites</h1>
 </div>
