--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -5,6 +5,8 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
 
     <style type="text/css">
         .navbar {
@@ -27,9 +29,11 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
     <title>Slugbites</title>
 </head>
 <body>
-    <div class="navbar">
-        <a href="/home">Home</a>
-        <a href="/food">Dishes</a>
+    <div class="topnav">
+        <a class="active" href="/home">Home</a>
+        <a href="/food">Menu</a>
+        <a href="/currentmeal">Current Meal</a>
+        <a href="/about">About</a>
     </div>
     <div id="content", name="content">
         {% block content %}
