--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -18,6 +18,8 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
         <a class="active" href="/home">Home</a>
         <a href="/food">Menu</a>
         <a href="/currentmeal">Current Meal</a>
+    </div>
+    <div class="searchbar">
         <input type="text" name="search" placeholder="Search..">
     </div>
     <div id="content", name="content">
