--- a/slugbites/main/templates/main/currentmeal.html
+++ b/slugbites/main/templates/main/currentmeal.html
@@ -7,13 +7,12 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
 <h1 style="padding-top: 50px">Full Menu</h1>
 <ul>
-    {% for meal, items in food.items %}
     <div>
-        <h2>{{meal}}</h2>
-        {% for item in items %}
-        <li>{{item}}</li>
-        {% endfor %}
+        {% for meal in meals %}
+         <h2>{{meal}}</h2>
+         {% for item in items %}
+            <li>{{item}}</li>
+         {% endfor %}
     </div>
-    {% endfor %}
 </ul>
 {% endblock %}
