--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -15,7 +15,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="/home">Home</a>
+        <a href="/home">Home</a>
         <a href="/food">Menu</a>
         <a href="/currentmeal">Current Meal</a>
     </div>
