set border radius of top bar to 18px

--- a/slugbites/static/slugbites/style.css
+++ b/slugbites/static/slugbites/style.css
@@ -51,12 +51,14 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    border-radius: 18px;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
     color: #f2f2f2;
+    border-radius: 18px;
     text-align: center;
     padding: 14px 16px;
     padding-left: 30px;
