--- a/slugbites/main/templates/main/currentmeal.html
+++ b/slugbites/main/templates/main/currentmeal.html
@@ -5,8 +5,11 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
-<ul>
-    <div>
-    </div>
-</ul>
+{% if not meals|length %}
+<div class="noMoreMeals">
+    <h1> There are no more meals for the day, consider looking at future days </h1>
+</div>
+{% else %}
+<h1>This is a test</h1>
+{% endif %}
 {% endblock %}
