--- a/slugbites/main/templates/main/base.html
+++ b/slugbites/main/templates/main/base.html
@@ -14,10 +14,13 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
     <title>Slugbites</title>
 </head>
 <body>
+    <div class="logo">
+        <img src="{% static 'slugbites/logo.svg' %}" alt="logo">
+    </div>
     <div class="topnav">
-        <a href="/home">Home</a>
-        <a href="/food">Menu</a>
         <a href="/currentmeal">Current Meal</a>
+        <a href="/food">Dishes</a>
+        <a href="/home">Home</a>
     </div>
     <div class="searchbar">
         <input type="text" name="search" placeholder="Search..">
