--- a/slugbites/static/slugbites/style.css
+++ b/slugbites/static/slugbites/style.css
@@ -49,28 +49,38 @@
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
-    overflow: hidden;
+    background-color: #483849;
+    /* overflow: hidden; */
+    height: 15%;
     border-radius: 18px;
+    width: 80%;
+    padding-top: 20px;
+    float: right;
+    /* padding-left: 25px; */
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
+    float: right;
+    width: 33%;
     color: #f2f2f2;
     border-radius: 18px;
     text-align: center;
-    padding: 14px 16px;
-    padding-left: 30px;
+    padding-left: 3px;
+    height: 40px;
     text-decoration: none;
+    vertical-align: middle;
+    margin: auto;
     font-family: 'Montserrat';
     font-size: 17px;
+    transition-property: color 2s;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    transition-timing-function: ease-in;
+    color: #211522;
+    transition-duration: 1s;
 }
 
 /* Add a color to the active/current link
@@ -84,7 +94,7 @@
     display: flex;
     justify-content: center;
     /* align-items: center; */
-    padding: 10px;
+    padding: 10px; 
 }
 
 .searchbar input[type=text]{
@@ -92,7 +102,7 @@
     /* width: 60%;
     margin: auto; */
     height: 30px;
-    width: 60%;
+    width: 70%;
     border-radius: 18px;
     text-align: center;
     background-color: #a3c4e0;
@@ -107,11 +117,16 @@
     height: 45px;
     transition: height 0.4s ease-in-out;
 }
+.logo{
+    width: 16%;
+    height : 20%;
+    float: left;
+}
 
-img{
+/* img{
     height: 100%;
     width: 100%;
-}
+} */
 
 body {
     background-color: #211522;
