edited style.css and home html

--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -9,5 +9,28 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <div>
     <h2>SlugBites</h2>
 </div>
-<img src="{% static 'slugbites/frog.jpg' %}" alt="My image">
+
+<div class ="row">
+    <div class="column">
+        <h2>Cowell/Stevenson</h2>
+        <canvas> id= "HallsContainer width=1596px height=608px"</canvas>
+    </div>
+
+    <div class="column">
+        <h2>Porter/Kresge</h2>
+        <p>hdhdhhhd</p>
+    </div>
+
+    <div class="column">
+        <h2>Crown/Merrill</h2>
+        <p>hdhdhhhd</p>
+    </div>
+
+    <div class="column">
+        <h2>College 9/John R Lewis</h2>
+        <p>hdhdhhhd</p>
+    </div>
+
+</div>
+<!-- <img src="{% static 'slugbites/frog.jpg' %}" alt="My image">-->
 {% endblock %}
