--- a/slugbites/static/slugbites/style.css
+++ b/slugbites/static/slugbites/style.css
@@ -118,8 +118,8 @@
     transition: height 0.4s ease-in-out;
 }
 .logo{
-    width: 16%;
-    height : 20%;
+    width: 12%;
+    height : 16%;
     float: left;
 }
 
@@ -132,4 +132,44 @@ body {
     background-color: #211522;
     color: #eef2f6;
     font-family: "Montserrat";
+}
+
+/*h2 {
+    text-align: right;
+}*/
+    
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    text-align: center;
+    position: relative;
+    float: left;
+    width: 20%;
+    padding: 15px;
+    background-color: #483849;
+    border-radius: 18px;
+}
+
+p.HallsContainer{
+    width: 1596px; 
+    height: 608px;
+}
+    
+
+@media screen and (max-width:600px){
+    .topnav a {
+        width: 100%;
+    }
+
+    .searchbar {
+        width: 100%;
+    }
+
+    .column {
+        width: 100%;
+    }
 }
