--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -13,22 +13,22 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <div class ="row">
     <div class="column">
         <h2>Cowell/Stevenson</h2>
-        <canvas> id= "HallsContainer width=1596px height=608px"</canvas>
+            <canvas> id= "HallsContainer"</canvas>
     </div>
 
     <div class="column">
         <h2>Porter/Kresge</h2>
-        <p>hdhdhhhd</p>
+            <canvas> id= "HallsContainer"</canvas>
     </div>
 
     <div class="column">
         <h2>Crown/Merrill</h2>
-        <p>hdhdhhhd</p>
+            <canvas> id= "HallsContainer"</canvas>
     </div>
 
     <div class="column">
         <h2>College 9/John R Lewis</h2>
-        <p>hdhdhhhd</p>
+            <canvas> id= "HallsContainer"</canvas>
     </div>
 
 </div>
