added icons and edited style

--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -10,25 +10,29 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
     <h2>SlugBites</h2>
 </div>
 
+<div class= "categories">
+    <p></p>
+</div>
+
 <div class ="row">
     <div class="column">
         <h2>Cowell/Stevenson</h2>
-            <canvas> id= "HallsContainer"</canvas>
+            <p></p>
     </div>
 
     <div class="column">
         <h2>Porter/Kresge</h2>
-            <canvas> id= "HallsContainer"</canvas>
+            <p></p>
     </div>
 
     <div class="column">
         <h2>Crown/Merrill</h2>
-            <canvas> id= "HallsContainer"</canvas>
+            <p></p>
     </div>
 
     <div class="column">
         <h2>College 9/John R Lewis</h2>
-            <canvas> id= "HallsContainer"</canvas>
+            <p></p>
     </div>
 
 </div>
