--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -7,28 +7,36 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 {% block content %}
     <link rel="stylesheet" href="{% static 'slugbites/style.css' %}"/>
 <div>
-    <h2>SlugBites</h2>
+    <div id = "siteTitle">
+        <h2>SlugBites</h2>
+    </div>
 </div>
 
 <div class= "categories">
     <p></p>
     <div class="icons">
-        <img src="{% static 'slugbites/icons/alchol icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/beef icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/egg icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/fish icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/gluten icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/halal icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/milk icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/nuts icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/pork icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/seasame icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/shellfish icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/soy icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/tree nuts icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/unknown icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/vegan icon.svg' %}" alt="icons">
-        <img src="{% static 'slugbites/icons/veggie icon.svg' %}" alt="icons">
+
+        <div id="topRowIcons">
+            <img src="{% static 'slugbites/icons/alchol icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/beef icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/egg icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/fish icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/gluten icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/halal icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/milk icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/nuts icon.svg' %}" alt="icons" class="icon">
+        </div>
+        
+        <div id="bottomRowIcons">
+            <img src="{% static 'slugbites/icons/pork icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/seasame icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/shellfish icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/soy icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/tree nuts icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/unknown icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/vegan icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/veggie icon.svg' %}" alt="icons" class="icon">
+        </div>
     </div>
 </div>
 
