--- a/slugbites/main/templates/main/home.html
+++ b/slugbites/main/templates/main/home.html
@@ -4,6 +4,8 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 {% extends "main/base.html" %}
 {% load static %}
+{% load pwa %}
+{% progressive_web_app_meta %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'slugbites/style.css' %}"/>
 <div>
