i'm going to sleep

--- a/slugbites/main/templates/main/food.html
+++ b/slugbites/main/templates/main/food.html
@@ -9,10 +9,14 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
     <ul>
         {% for meal, items in food.items %}
         <div>
-            <h2>{{meal}}</h2>
-            {% for item in items %}
-            <li>{{item}}</li>
-            {% endfor %}
+            <div class ="row">
+                <div class="columnTwo">
+                    <h2>{{meal}}</h2>
+                    {% for item in items %}
+                    <li>{{item}}</li>
+                    {% endfor %}
+                </div>
+                    
         </div>
         {% endfor %}
     </ul>
