--- a/slugbites/static/slugbites/style.css
+++ b/slugbites/static/slugbites/style.css
@@ -50,27 +50,28 @@
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #483849;
-    /* overflow: hidden; */
+    overflow: hidden;
     height: 15%;
     border-radius: 18px;
     width: 80%;
     padding-top: 20px;
+    padding-right: 20px;
     float: right;
     /* padding-left: 25px; */
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+.topnav a{
     float: right;
-    width: 33%;
+    width: 25%;
     color: #f2f2f2;
     border-radius: 18px;
     text-align: center;
-    padding-left: 3px;
+    /* padding-left: 1px; */
     height: 40px;
     text-decoration: none;
-    vertical-align: middle;
-    margin: auto;
+    vertical-align: top;
+    /* margin: auto; */
     font-family: 'Montserrat';
     font-size: 17px;
     transition-property: color 2s;
@@ -101,20 +102,22 @@
     /* height: 40px; */
     /* width: 60%;
     margin: auto; */
-    height: 30px;
-    width: 80%;
+    height: 40px;
+    width: 100%;
     border-radius: 18px;
     text-align: center;
     background-color: #a3c4e0;
     color: #483849;
     font-family: "Montserrat";
     font-size: large;
+    display: flex;
     /* transition: width 0.4s ease-in-out;  */
 }
 
 /* When the input field gets focus, change its width to 100% */
 .searchbar input[type=text]:focus {
     height: 45px;
+    width: 100%;
     transition: height 0.4s ease-in-out;
 }
 
@@ -228,14 +231,15 @@ body {
     text-align: center;
     justify-content: center;
     display: flex;
-    display: table;
+    /* display: table; */
+    width: 100%;
     /* clear: both; */
 }
 
 .column {
     margin: 10px;
     float: left;
-    width: 20%;
+    width: 19%;
     height: 608px;
     background-color: #483849;
     border-radius: 18px;
