--- a/slugbites/main/templates/main/searchresults.html
+++ b/slugbites/main/templates/main/searchresults.html
@@ -1,7 +1,88 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
+
 {% extends "main/base.html" %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
+<div>
+    <div id="siteTitle">
+        <h2>SlugBites</h2>
+    </div>
+</div>
+
+<div class="categories">
+    <p></p>
+    <div class="icons">
+
+        <div id="topRowIcons">
+            <img src="{% static 'slugbites/icons/alchol icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/beef icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/egg icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/fish icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/gluten icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/halal icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/milk icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/nuts icon.svg' %}" alt="icons" class="icon">
+        </div>
+
+        <div id="bottomRowIcons">
+            <img src="{% static 'slugbites/icons/pork icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/seasame icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/shellfish icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/soy icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/tree nuts icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/unknown icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/vegan icon.svg' %}" alt="icons" class="icon">
+            <img src="{% static 'slugbites/icons/veggie icon.svg' %}" alt="icons" class="icon">
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+        <h2><b>College 9/JRL</b></h2>
+        {% for t, l in C9.items %}
+        <h3>{{t}}</h3>
+        {% for i in l %}
+        <h4>{{i.name}}</h4>
+        {% endfor %}
+        {% endfor %}
+    </div>
+
+    <div class="column">
+        <h2>Cowell/Stevenson</h2>
+        {% for t, l in COW.items %}
+        <h3>{{t}}</h3>
+        {% for i in l %}
+        <h4>{{i.name}}</h4>
+        {% endfor %}
+        {% endfor %}
+    </div>
+
+    <div class="column">
+        <h2>Crown/Merrill</h2>
+        {% for t, l in CRO.items %}
+        <h3>{{t}}</h3>
+        {% for i in l %}
+        <h4>{{i.name}}</h4>
+        {% endfor %}
+        {% endfor %}
+    </div>
+
+    <div class="column">
+        <h2>Porter/Kresge</h2>
+        {% for t, l in C9.items %}
+        <h3>{{t}}</h3>
+        {% for i in l %}
+        <h4>{{i.name}}</h4>
+        {% endfor %}
+        {% endfor %}
+    </div>
+
+
+
+</div>
+<!-- <img src="{% static 'slugbites/frog.jpg' %}" alt="My image">-->
 {% endblock %}
