trying to fix static file serving issue

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -9,7 +9,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <html lang="en">
 <head>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
+    <link rel="stylesheet" href="{% static '/slugbites/style.css/' %}" />
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
