Still trying to fix

--- a/main/templates/main/currentmeal.html
+++ b/main/templates/main/currentmeal.html
@@ -4,7 +4,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 {% extends "main/base.html" %}
 {% load static %}
 {% block content %}
-<!-- <link rel="stylesheet" href="{% static 'slugbites/style.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'slugbites/style.css' %}" />
 <!-- dynamicly link refsheet somewhere -->
 {% with mealslength=meals|length %}
 {% if mealslength == 1 %}
